--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "sass": "^1.70.0",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://hrynkevych.github.io/react_phone_app",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash.debounce": "^4.0.9"
+    "@types/lodash.debounce": "^4.0.9",
+    "gh-pages": "^6.1.1"
   }
 }
